5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1764_672.log
== TEST (2019-05-21 17:35:17) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = ones(6 ,dpyte=int)
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:35:45) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = ones(6 ,dtype=int)
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:35:50) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = ones(6 ,dtype=int)
print(n)

-- EXECUTION TIME:
0.472698
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:35:56) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = ones(6 ,dtype=int)
print(n)

-- EXECUTION TIME:
0.477647
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:36:49) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = ones( ,dtype=int)
print(n)

-- ERROR:
File "XXXX", line 3
    n = ones( ,dtype=int)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:37:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

n = ones(6 , dtype=int)
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:37:21) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

n = ones(6 , dtype=int)
print(n)

-- EXECUTION TIME:
0.472996
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:37:40) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

v1 = ones(6 , dtype=int)
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:37:42) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

v1 = ones(6 , dtype=int)
print(v1)

-- EXECUTION TIME:
0.526863
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:38:41) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

v1 = ones(6 , dtype=int)
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:40:42) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
N = int(input())
v1 = ones(6 , dtype=int)
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:40:49) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
N = int(input())
v1 = ones(6 , dtype=int)
print(v1)

-- EXECUTION TIME:
0.378602
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:41:06) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
N = int(input(v1))
v1 = ones(, dtype=int)
print(v1)

-- ERROR:
File "XXXX", line 4
    v1 = ones(, dtype=int)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:41:19) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
N = int(input('v1'))
v1 = ones(, dtype=int)
print(v1)

-- ERROR:
File "XXXX", line 4
    v1 = ones(, dtype=int)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:41:33) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
N = int(input('n'))
n = ones(, dtype=int)
print(v1)

-- ERROR:
File "XXXX", line 4
    n = ones(, dtype=int)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:42:15) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
N = int(input('n'))
n = ones(N,dtype=int)
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:42:26) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
N = int(input('n'))
n = ones(N,dtype=int)
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:42:31) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
N = int(input('n'))
n = ones(N,dtype=int)
print(n)

-- EXECUTION TIME:
0.539925
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
